...
  Widget build(BuildContext context) {
    return Consumer(builder: (context, ref, _) {
      return AppDialog(
        child: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            Text("Resume your previous game ?"),
            SizedBox(height: 24),
            ElevatedButton.icon(
              key: const Key('resume-yes-button'),
              onPressed: () {
                final gameController = ref.read(gameControllerProvider.notifier);
                gameController.resumeGame(gameState);
...
                  borderRadius: BorderRadius.circular(16),
                ),
              ),
            ),
            SizedBox(height: 8),
            ElevatedButton.icon(
              key: const Key('resume-no-button'),
              onPressed: () async {
                final savedGameController = ref.read(savedGameControllerProvider.notifier);
                await savedGameController.removeSavedGame();

                if (context.mounted) context.pop();
              },
...
