...
            child: Column(
              children: [
                AppSpacing.h2xl,
                Image.asset("assets/images/menu_logo.png", width: 200, height: 200),
                AppSpacing.hXl,
                Text(
                  "Welcome to Tic Tac Toe",
                  style:
                      TextStyle(fontSize: 24, color: AppColors.gray, fontWeight: FontWeight.bold),
                ),
                Spacer(),
                SelectGameModeButton(
                  "Play vs IA",
...
                  onPressed: () {
                    ref.read(gameControllerProvider.notifier).start(GameMode.vsAI);
                  },
                ),
                AppSpacing.hXl,
                SelectGameModeButton(
                  "Play vs player",
                  color: Colors.teal,
                  margin: EdgeInsets.symmetric(horizontal: AppSpacing.lg),
                  isPrimary: false,
                  onPressed: () {
                    ref.read(gameControllerProvider.notifier).start(GameMode.vsHuman);
                  },
...
